--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "mongodb": "^3.0.2",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
     "push.js": "^1.0.5",
     "serve-favicon": "^2.4.5",
